--- a/basicktest/src/main/res/layout/activity_basek_demo_service.xml
+++ b/basicktest/src/main/res/layout/activity_basek_demo_service.xml
@@ -4,10 +4,20 @@
 
     <data />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".basick.basek.BaseKDemoServiceActivity">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/basek_service_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/blue_normal"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:text="123" />
+
+    </FrameLayout>
 </layout>
