--- a/basicktest/src/main/res/layout/activity_utilk_gesture.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_gesture.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.mozhimen.basicktest.basick.utilk.UtilKGestureActivity">
+        tools:context=".utilk.UtilKGestureActivity">
 
         <TextView
             android:layout_width="wrap_content"
