--- a/basicktest/src/main/res/layout/activity_prefabk.xml
+++ b/basicktest/src/main/res/layout/activity_prefabk.xml
@@ -7,15 +7,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".utilk.UtilKAudioActivity">
+        android:orientation="vertical">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/utilk_audio_btn"
             style="@style/BtnStyle"
-            android:layout_marginBottom="10dp"
-            android:text="UtilKAudio(测试多曲目)"
-            tools:ignore="HardcodedText" />
-
+            android:onClick="goPrefabKAudio"
+            android:text="goPrefabKAudio"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
     </LinearLayout>
 </layout>
