--- a/basicktest/src/main/res/layout/activity_utilk_asset.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_asset.xml
@@ -13,7 +13,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/utilk_asset_recycler"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="match_parent"
             android:background="@color/black" />
 
     </LinearLayout>
