--- a/basicktest/src/main/res/layout/fragment_basek_fragment_vbvm.xml
+++ b/basicktest/src/main/res/layout/fragment_basek_fragment_vbvm.xml
@@ -11,14 +11,12 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".basek.BaseKDemoFragment">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="BaseKDemoActivity"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/basek_demo_fragment_vbvm_btn"
+            style="@style/BtnStyle"
+            android:text="Add Num(VBVM)"
             tools:ignore="HardcodedText" />
 
     </FrameLayout>
