--- a/componentktest/src/main/res/layout/activity_netk.xml
+++ b/componentktest/src/main/res/layout/activity_netk.xml
@@ -6,14 +6,14 @@
 
         <variable
             name="vm"
-            type="com.mozhimen.componentktest.netk.NetKViewModel" />
+            type="com.mozhimen.componentktest.netk.http.NetKHttpViewModel" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="com.mozhimen.componentktest.netk.NetKActivity">
+        tools:context="com.mozhimen.componentktest.netk.http.NetKHttpActivity">
 
         <TextView
             android:id="@+id/netk_txt1"
