--- a/componentktest/src/main/res/layout/activity_netk.xml
+++ b/componentktest/src/main/res/layout/activity_netk.xml
@@ -1,34 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <variable
-            name="vm"
-            type="com.mozhimen.componentktest.netk.http.NetKHttpViewModel" />
-    </data>
+    <data />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="com.mozhimen.componentktest.netk.http.NetKHttpActivity">
-
-        <TextView
-            android:id="@+id/netk_txt1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/blue_light"
-            android:hint="当前的天气"
-            android:text="@{vm.uiWeather2}"
-            tools:ignore="HardcodedText" />
+        android:orientation="vertical">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/netk_btn1_get_weather"
             style="@style/BtnStyle"
-            android:text="查询天气(协程方法)"
-            tools:ignore="HardcodedText" />
+            android:onClick="goNetKFile"
+            android:text="goNetKFile"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
 
+        <com.google.android.material.button.MaterialButton
+            style="@style/BtnStyle"
+            android:onClick="goNetKHttp"
+            android:text="goNetKHttp"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
     </LinearLayout>
 </layout>
