--- a/uicorek/src/main/res/values/attrs.xml
+++ b/uicorek/src/main/res/values/attrs.xml
@@ -5,6 +5,11 @@
         <attr name="btnKIcon_fontPath" format="string" />
     </declare-styleable>
 
+    <declare-styleable name="BtnKPwdEye">
+        <attr name="btnKPwdEye_openEyeDrawable" format="reference" />
+        <attr name="btnKPwdEye_closeEyeDrawable" format="reference" />
+    </declare-styleable>
+
     <!--viewk-->
     <declare-styleable name="ImageKMask">
         <!--蒙版类型-->
