--- a/uicorek/src/main/res/layout/layoutk_empty.xml
+++ b/uicorek/src/main/res/layout/layoutk_empty.xml
@@ -14,10 +14,11 @@
         android:layout_height="200dp"
         android:layout_marginBottom="20dp"
         android:src="@mipmap/layoutk_empty"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/layoutk_empty_icon"
+        android:id="@+id/layoutk_empty_icon_font"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -25,7 +26,8 @@
         android:textColor="@color/gray_light"
         android:textSize="120sp"
         android:textStyle="bold"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/layoutk_empty_title"
@@ -38,7 +40,9 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:visibility="gone"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        tools:text="暂无内容"
+        tools:visibility="visible" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -55,17 +59,18 @@
             android:textColor="@color/gray_light"
             android:textSize="14sp"
             android:visibility="gone"
-            tools:text="虽然什么也没有,要不刷新看看~" />
+            tools:text="虽然什么也没有,要不刷新看看~"
+            tools:visibility="visible" />
 
         <TextView
-            android:id="@+id/layoutk_empty_help"
+            android:id="@+id/layoutk_empty_help_icon_font"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:gravity="center"
             android:textColor="@color/blue_normal"
             android:textSize="14sp"
-            android:visibility="gone" />
+            android:visibility="gone"/>
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
@@ -73,5 +78,6 @@
         style="@style/LayoutK_Empty_BtnStyle_Cancel"
         android:text="刷新"
         android:visibility="gone"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        tools:visibility="visible" />
 </LinearLayout>
