--- a/uicorektest/src/main/res/layout/activity_textk.xml
+++ b/uicorektest/src/main/res/layout/activity_textk.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data />
@@ -19,6 +20,11 @@
             style="@style/BtnStyle"
             android:text="点击出现提示信息(TextKBubble)"
             tools:ignore="HardcodedText" />
+
+        <com.mozhimen.uicorek.textk.TextKClock
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:textkClock_timeFormat="yyyyMMddhhmmssS" />
 
     </LinearLayout>
 </layout>
