--- a/componentktest/src/main/res/layout/activity_audiok.xml
+++ b/componentktest/src/main/res/layout/activity_audiok.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data />
@@ -7,12 +8,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".audiok.AudioKActivity">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/audiok_recycler"
+        <com.mozhimen.uicorek.layoutk.slider.LayoutKSlider
+            android:id="@+id/audiok_slider"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layoutKSlider_rodIsInside="true" />
 
+        <TextView
+            android:id="@+id/audiok_slider_volume_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.0" />
     </LinearLayout>
 </layout>
