--- a/uicorektest/src/main/res/layout/activity_textk.xml
+++ b/uicorektest/src/main/res/layout/activity_textk.xml
@@ -24,7 +24,7 @@
         <com.mozhimen.uicorek.textk.TextKClock
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:textkClock_timeFormat="yyyyMMddhhmmssS" />
+            app:textkClock_timeFormat="yyyyMMddHHmmss" />
 
     </LinearLayout>
 </layout>
