--- a/uicorektest/src/main/res/layout/activity_layoutk_slider.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_slider.xml
@@ -21,14 +21,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:background="@color/black"
             app:layoutKSlider_sliderRodLeftColor="@color/blue_light"
             app:layoutKSlider_sliderRodLeftGradientColor="@color/blue_dark" />
+
+        <TextView
+            android:id="@+id/layoutk_slider_inside_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:textColor="@color/blue_normal" />
 
         <com.mozhimen.uicorek.layoutk.slider.LayoutKSlider
             android:id="@+id/layoutk_slider_inside"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:background="@color/black"
             app:layoutKSlider_rodIsInside="true" />
 
     </LinearLayout>
