--- a/basicktest/src/main/res/layout/activity_taskk.xml
+++ b/basicktest/src/main/res/layout/activity_taskk.xml
@@ -20,5 +20,11 @@
             android:onClick="goTaskKAsync"
             android:text="goTaskKAsync"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/BtnStyle"
+            android:onClick="goTaskKThreadPool"
+            android:text="goTaskKThreadPool"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
     </LinearLayout>
 </layout>
