--- a/uicorektest/src/main/res/values/values.xml
+++ b/uicorektest/src/main/res/values/values.xml
@@ -11,6 +11,7 @@
         <item name="android:textSize">16sp</item>
         <item name="cornerRadius">16dp</item>
         <item name="strokeColor">@color/blue_dark</item>
+        <item name="textAllCaps">false</item>
     </style>
 
     <style name="DialogKAnim_Custom" parent="android:Animation">
