--- a/componentktest/src/main/res/layout/activity_audiok.xml
+++ b/componentktest/src/main/res/layout/activity_audiok.xml
@@ -12,7 +12,7 @@
         tools:context=".audiok.AudioKActivity">
 
         <com.mozhimen.uicorek.layoutk.slider.LayoutKSlider
-            android:id="@+id/audiok_slider"
+            android:id="@+id/audiok_slider_volume"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -21,7 +21,18 @@
         <TextView
             android:id="@+id/audiok_slider_volume_txt"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <com.mozhimen.uicorek.layoutk.slider.LayoutKSlider
+            android:id="@+id/audiok_slider_volume"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="0.0" />
+            android:layout_margin="10dp"
+            app:layoutKSlider_rodIsInside="true" />
+
+        <TextView
+            android:id="@+id/audiok_slider_volume_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </layout>
