--- a/componentktest/src/main/res/layout/activity_audiok.xml
+++ b/componentktest/src/main/res/layout/activity_audiok.xml
@@ -9,19 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:gravity="center"
         tools:context=".audiok.AudioKActivity">
-
-        <com.mozhimen.uicorek.layoutk.slider.LayoutKSlider
-            android:id="@+id/audiok_slider_volume"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:layoutKSlider_rodIsInside="true" />
-
-        <TextView
-            android:id="@+id/audiok_slider_volume_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
 
         <com.mozhimen.uicorek.layoutk.slider.LayoutKSlider
             android:id="@+id/audiok_slider_volume"
