--- a/componentktest/src/main/res/layout/fragment_first.xml
+++ b/componentktest/src/main/res/layout/fragment_first.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data />
@@ -17,6 +16,11 @@
             android:layout_height="wrap_content"
             android:text="第一个Fragment(点击去第二个Fragment)"
             tools:ignore="HardcodedText" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/navigatek_fragment_first_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 </layout>
