--- a/componentktest/src/main/res/layout/fragment_second.xml
+++ b/componentktest/src/main/res/layout/fragment_second.xml
@@ -4,16 +4,22 @@
 
     <data />
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/navigatek_fragment_second_txt"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="第二个Fragment(点击去第一个Fragment)"
             tools:ignore="HardcodedText" />
 
-    </FrameLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/navigatek_fragment_second_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 </layout>
